--- a/landing.css
+++ b/landing.css
@@ -23,7 +23,7 @@ section.landing {
 }
 
 .wrapper {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(asset/background.jpg);
+    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(asset/backgr.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -58,7 +58,7 @@ footer {
     text-align: center;
     padding: 1.5 rem;
     overflow: hidden;
-    background: linear-gradient(to bottom, var(--black-color) 30%, var(--black-color) 200%);
+    background: linear-gradient(to bottom, var(--white-color) 30%, var(--white-color) 200%);
 }
 
 span {
