--- a/landing.css
+++ b/landing.css
@@ -1,4 +1,13 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
 section.landing {
+    background-image: url(asset/backgr.png);
+    
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -8,7 +17,6 @@ section.landing {
 }
 
 :root {
-    --header-height: 3rem;
     --first-color: rgb(246, 164, 252);
     --second-color: #c157aa;
     --third-color: #a83e91; 
@@ -32,8 +40,7 @@ section.landing {
 .landing-img img {
     max-width: 460px;
     height: auto;
-    width: 110%;
-    
+    width: auto;
 }
 
 .button {
@@ -54,15 +61,26 @@ section.landing {
 };
 
 footer {
-    color: var(--white-color);
+    
+    width: auto;
     text-align: center;
-    padding: 1.5 rem;
+    padding: 1.0 rem;
     overflow: hidden;
-    background: linear-gradient(to bottom, var(--white-color) 30%, var(--white-color) 200%);
+    
 }
 
-span {
-    color: var(--white-color);
+.info-column {
+  background-color: #e99fb5;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+
+  
+}
+
+.info-container {
+  text-align: center;
+  margin: 20px;
 }
 
 
@@ -79,7 +97,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
-  background-color: #e08cd2;
+  background-color: #802570;
   color: white;
   padding: 16px 20px;
   border: none;
@@ -125,7 +143,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  background-color: #d8a8e3;
+  background-color: #d223f9;
   color: white;
   padding: 16px 20px;
   border: none;
@@ -137,7 +155,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: rgb(232, 90, 236);
+  background-color: rgb(231, 104, 236);
 }
 
 /* Add some hover effects to buttons */
