--- a/book.css
+++ b/book.css
@@ -10,10 +10,10 @@
     --header-height: 3rem;
 
     /*===== Color Palette =====*/
-    --first-color: rgb(246, 164, 252);
-    --second-color: #c157aa;
-    --third-color: #a83e91; 
-    --white-color: #FCF8F8;
+    --first-color: rgb(10, 8, 10);
+    --second-color: #e0b36b;
+    --third-color: #c25e24; 
+    --fourth-color: #a36a6a;
     
     /*===== Font and typography =====*/
     --big-font: 'Courgette';
@@ -26,15 +26,16 @@ header.sticky {
     position: flex;
     width: 100%;
     height: 60px;
-    color: white;
+    color: black;
     text-align: center;
 }
 
 body {
-    background-image: url('asset/background\ \(2\).jpg');
+    background-image: url('asset/grbg2.png');
     background-repeat: no-repeat;
     background-position: right top;
-    color: var(--white-color);
+    background-color: cover;
+    color: var(--fourth-color);
 }
 
 #bookshelf {
@@ -45,7 +46,7 @@ body {
 }
 
 .book {
-    border: 1px solid #ddd;
+    border: 1px solid #130e0e;
     margin: 10px;
     padding: 10px;
     text-align: center;
@@ -60,14 +61,15 @@ body {
 
 
 .navbar {
-    background-image: url('asset/background\ \(2\).jpg') !important;
+    background-image: url('asset/gradienbg.png') !important;
     background-repeat: no-repeat;
     background-position: right top;
+    background-size:cover;
 }
 
 .navbar-brand {
     font-family: 'Courgette', sans-serif;
-    color: var(--white-color) !important;
+    color: var(--first-color) !important;
     margin: 0 20px; 
 
 }
@@ -75,14 +77,14 @@ body {
 .navbar-brand:hover {
     border: 2px solid transparent;
     border-radius: 20px;
-    color: var(--white-color);
+    color: var(--fourth-color);
     transform: scale(1.1); 
     transition: transform 0.3s ease; 
 }
 
 .navbar-nav {
     font-family: 'Courgette', sans-serif;
-    color: var(--white-color);
+    color: var(--fourth-color);
     background-color: rgba(255, 255, 255, 0.3); 
     border: 2px solid transparent; 
     border-radius: 50px;
@@ -97,13 +99,13 @@ body {
 }
 
 .nav-item {
-    color: var(--white-color);
+    color: var(--fourth-color);
     margin : 0 20px;
    
 }
 
 .nav-item:hover{
-    background-color: rgba(255, 255, 255, 0.3); 
+    background-color: rgba(237, 237, 237, 0.3); 
     transition: background-color 0.3s ease; 
     border-radius: 50px;
     margin-left: 10px;
@@ -120,13 +122,13 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(29, 26, 26, 0.7);
     justify-content: center;
     align-items: center;
 }
 
 .overlay-content {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(252, 252, 252, 0.795);
     padding: 20px;
     border-radius: 5px;
     text-align: center;
@@ -144,7 +146,7 @@ section.buku {
     align-items: center;
     gap: 3rem;
 
-    background-image: url('asset/background\ \(2\).jpg') !important;
+    background-image: url('asset/gradienbg.png') !important;
     background-repeat: no-repeat;
     background-position: right top;
     background-size: cover;
@@ -153,7 +155,7 @@ section.buku {
 
 .overlay-content p {
     font-family: var(--head-font); /* Apply sans-serif font to overlay description */
-    color: var(--white-color);
+    color: var(--first-color);
 }
 
 .book {
@@ -165,7 +167,7 @@ section.buku {
     transition: transform 0.3s ease-in-out;
     cursor: pointer;
     font-family: var(--head-font); /* Apply sans-serif font to book description */
-    color: var(--white-color);
+    color: var(--first-color);
 }
 
 .add-to-trolley {
@@ -174,7 +176,7 @@ section.buku {
 
 .add-to-trolley button {
     padding: 10px 20px;
-    background-color: rgb(170, 76, 175);
+    background-color: rgb(42, 38, 32);
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -182,7 +184,7 @@ section.buku {
 }
 
 .add-to-trolley button:hover {
-    background-color:  rgb(170, 76, 175);
+    background-color:  rgb(95, 94, 87);
 }
 
 .book h3 {
