--- a/landing.css
+++ b/landing.css
@@ -23,14 +23,14 @@ section.landing {
 }
 
 .wrapper {
-    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(asset/backgr.png);
+    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(asset/gradienbg.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
 }
 
 .landing-img img {
-    max-width: 460px;
+    max-width: 450px;
     height: auto;
     width: 110%;
     
@@ -79,7 +79,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
-  background-color: #e08cd2;
+  background-color: #fec89a;
   color: white;
   padding: 16px 20px;
   border: none;
