--- a/ourBooks.css
+++ b/ourBooks.css
@@ -32,7 +32,7 @@ header.sticky {
 
 body {
     background-image: url('asset/grbg2.png');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: right top;
     background-color: cover;
     color: var(--fourth-color);
