--- a/trolley.css
+++ b/trolley.css
@@ -41,14 +41,14 @@ body {
 
 
 .navbar {
-    background-image: url('asset/background\ \(2\).jpg') !important;
+    background-image: url('asset/grbg2.png') !important;
     background-repeat: no-repeat;
     background-position: right top;
 }
 
 .navbar-brand {
     font-family: 'Courgette', sans-serif;
-    color: var(--white-color);
+    color: black;
     margin: 0 20px; 
 
 }
