--- a/styles.css
+++ b/styles.css
@@ -21,15 +21,16 @@
 body {
     font-family: 'Courgette', sans-serif;
     background-image: url('asset/gradienbg.png');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: right top;
+    background-size: cover;
 }
 
 .container {
     max-width: 1000px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #603657;
+    background-color: rgb(239, 220, 188);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -38,7 +39,7 @@ header.sticky {
     position: flex;
     width: 100%;
     height: 60px;
-    color: white;
+    color: black;
     padding: 10px;
     text-align: center;
 }
@@ -47,6 +48,7 @@ header.sticky {
     background-image: url('asset/grbg2.png') !important;
     background-repeat: no-repeat;
     background-position: right top;
+    background-size: cover;
 }
 
 .navbar-brand {
@@ -115,7 +117,7 @@ main {
 
 button {
     padding: 10px 30px;
-    background-color: #4caf50;
+    background-color: #af934c;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -123,5 +125,5 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: var(--second-color);
 }
