--- a/trolley.css
+++ b/trolley.css
@@ -9,11 +9,10 @@
 :root {
     --header-height: 3rem;
 
-    /*===== Color Palette =====*/
-    --first-color: rgb(246, 164, 252);
-    --second-color: #c157aa;
-    --third-color: #a83e91; 
-    --white-color: #FCF8F8;
+    --first-color: rgb(10, 8, 10);
+    --second-color: #e0b36b;
+    --third-color: #c25e24; 
+    --fourth-color: #a36a6a;
     
     /*===== Font and typography =====*/
     --big-font: 'Courgette';
@@ -26,14 +25,14 @@ header.sticky {
     position: flex;
     width: 100%;
     height: 60px;
-    color: white;
+    color: transparent;
     padding: 10px;
     text-align: center;
 }
 
 body {
     background-image: url('asset/gradienbg.png');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: right top;
     background-size: cover;
     color: var(--third-color);
@@ -107,7 +106,7 @@ body {
 }
 
 .trolley {
-    background-color: #fff;
+    background-color: transparent;
     padding: 16px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
