--- a/trolley.css
+++ b/trolley.css
@@ -32,7 +32,7 @@ header.sticky {
 
 body {
     background-image: url('asset/gradienbg.png');
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-position: right top;
     background-size: cover;
     color: var(--third-color);
