--- a/home.css
+++ b/home.css
@@ -14,6 +14,7 @@
     --second-color: #e0b36b;
     --third-color: #c25e24; 
     --fourth-color: #a36a6a;
+    --white-color:  #ffffff;
     
     /*===== Font and typography =====*/
     --big-font: 'Courgette';
