--- a/trolley.css
+++ b/trolley.css
@@ -43,6 +43,7 @@ body {
     background-image: url('asset/grbg2.png') !important;
     background-repeat: no-repeat;
     background-position: right top;
+    background-size: cover;
 }
 
 .navbar-brand {
